@@ -6,6 +6,7 @@
 
 - compat-28: Improve =make-separator-line= visuals on graphic displays.
 - compat-28: Add =native-comp-available-p=, which always returns nil.
+- compat-29: Add variable =lisp-directory=.
 
 * Release of "Compat" Version 29.1.4.1
 
